tests/snapshots/integration__integration_tests__help__help_config_state_logs.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - logs
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_ALLOW_PROTOCOL: file
    GIT_CONFIG_COUNT: "2"
    GIT_CONFIG_GLOBAL: /nonexistent/wt/gitconfig
    GIT_CONFIG_KEY_0: user.useConfigOnly
    GIT_CONFIG_KEY_1: rerere.enabled
    GIT_CONFIG_SYSTEM: /nonexistent/wt/gitconfig
    GIT_CONFIG_VALUE_0: "true"
    GIT_CONFIG_VALUE_1: "false"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_PROBE_TIMEOUT_MS: "60000"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
---
success: true
exit_code: 0
----- stdout -----
wt config state logs - Operation and debug logs

Usage: [1m[36mwt config state logs[0m [36m[OPTIONS][0m [36m[COMMAND][0m

[1m[32mCommands:[0m
  [1m[36mget[0m      List all log file paths
  [1m[36mprofile[0m  Performance profile from a trace
  [1m[36mclear[0m    Clear all log files

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mOutput:[0m
      [1m[36m--format[0m[36m [0m[36m<FORMAT>[0m
          Output format (text, json) [default: text]

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

      [1m[36m--config-set[0m[36m [0m[36m<toml>[0m
          Override config with inline TOML, e.g. --config-set list.full=true (repeatable)

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: info logs + hook/alias template variables on stderr; -vv: also debug logs and raw subprocess output written to .git/wt/logs/). Set WORKTRUNK_VERBOSE=0|1|2 to apply the same level everywhere — including shell completion, which no flag can reach

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

View and manage log files — hook output, command audit trail, and debug diagnostics.

[1m[32mWhat's logged[0m

Three kinds of logs live in [2m.git/wt/logs/[0m:

[32mCommand log (commands.jsonl)[0m

All hook executions and LLM commands are recorded automatically — one JSON object per line. Rotates to [2mcommands.jsonl.old[0m at 1MB (~2MB total). Fields:

 Field                             Description                             
 ────── ────────────────────────────────────────────────────────────────── 
 [2mts[0m     ISO 8601 timestamp                                                 
 [2mwt[0m     The [2mwt[0m command that triggered this (e.g., [2mwt hook pre-merge --yes[0m) 
 [2mlabel[0m  What ran (e.g., [2mpre-merge user:lint[0m, [2mcommit.generation[0m)            
 [2mcmd[0m    Shell command executed                                             
 [2mexit[0m   Exit code ([2mnull[0m for background commands)                           
 [2mdur_ms[0m Duration in milliseconds ([2mnull[0m for background commands)            

The command log appends entries and is not branch-specific — it records all activity across all worktrees.

[32mHook output logs[0m

Hook output lives in per-branch subtrees under [2m.git/wt/logs/{branch}/[0m:

     Operation                      Log path                 
 ────────────────── ──────────────────────────────────────── 
 Background hooks   [2m{branch}/{source}/{hook-type}/{name}.log[0m 
 Background removal [2m{branch}/internal/remove.log[0m             

All [2mpost-*[0m hooks (post-start, post-switch, post-commit, post-merge, post-remove) run in the background and produce log files. Source is [2muser[0m or [2mproject[0m. Branch and hook names are sanitized for filesystem safety. Same operation on same branch overwrites the previous log. Removing a branch clears its subtree; orphans from deleted branches can be swept with [2mwt config state logs clear[0m.

[32mDiagnostic files[0m

      File        Created when   
 ────────────── ──────────────── 
 [2mtrace.log[0m      Running with [2m-vv[0m 
 [2mtrace.jsonl[0m    Running with [2m-vv[0m 
 [2msubprocess.log[0m Running with [2m-vv[0m 
 [2mdiagnostic.md[0m  Running with [2m-vv[0m 

[2mtrace.log[0m is the human-readable trace of commands and their timings. [2mtrace.jsonl[0m holds the same events as JSON lines, which [2mwt config state logs profile[0m summarizes into a performance report. [2msubprocess.log[0m holds full subprocess output. [2mdiagnostic.md[0m is a bug-report bundle; [2mwt[0m prints a [2mgh gist create[0m command for it. All four are overwritten on each [2m-vv[0m run.

[1m[32mLocation[0m

All logs are stored in [2m.git/wt/logs/[0m (in the main worktree's git directory). All worktrees write to the same directory.

[1m[32mStructured output[0m

[2mwt config state logs --format=json[0m emits three arrays — [2mcommand_log[0m, [2mhook_output[0m, [2mdiagnostic[0m. Each entry carries a [2mfile[0m (relative), [2mpath[0m (absolute), [2msize[0m, and [2mmodified_at[0m (unix seconds). Hook-output entries additionally expose [2mbranch[0m, [2msource[0m ([2muser[0m / [2mproject[0m / [2minternal[0m), [2mhook_type[0m (the [2mpost-*[0m kind, or [2mnull[0m for internal ops), and [2mname[0m. [2mbranch[0m is the branch name, or [2mnull[0m when no local branch writes to that log directory (e.g. the branch was deleted). [2mname[0m is the hook name as it appears in the log 
path, which differs from the configured name only when that contains characters unsafe in a filename. Filter with [2mjq[0m to pick out a specific entry.

[1m[32mExamples[0m

List all log files:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs[0m

Query the command log:
[107m [0m [2m[0m[2m[34mtail[0m[2m [0m[2m[36m-5[0m[2m .git/wt/logs/commands.jsonl [0m[2m[36m|[0m[2m [0m[2m[34mjq[0m[2m .[0m

Path to one hook log (e.g. the [2mpost-start[0m [2mserver[0m hook for the current branch):
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs [0m[2m[36m--format=json[0m[2m [0m[2m[36m|[0m[2m [0m[2m[34mjq[0m[2m [0m[2m[36m-r[0m[2m [0m[2m[36m--arg[0m[2m branch [0m[2m[32m"$([0m[2m[34mgit[0m[2m branch [0m[2m[36m--show-current[0m[2m)"[0m[2m [0m[2m[32m'.hook_output[] | select([.branch, .source, .hook_type, .name] == [$branch, "user", "post-start", "server"]) | .path'[0m

Logs for a specific branch:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs [0m[2m[36m--format=json[0m[2m [0m[2m[36m|[0m[2m [0m[2m[34mjq[0m[2m [0m[2m[32m'.hook_output[] | select(.branch == "feature/auth")'[0m

Clear all logs:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs clear[0m

----- stderr -----
