tests/snapshots/integration__integration_tests__help__help_config_state_logs_clear.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - logs
    - clear
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state logs clear - Clear background operation logs

Usage: [1m[36mwt config state logs clear[0m [36m[OPTIONS]

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help[0m  Print help

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>[0m            Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m  User config file path
  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m     Verbose output (-v: hooks, templates; -vv: debug report)
