tests/snapshots/integration__integration_tests__help__help_config_state_logs_profile.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - logs
    - profile
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_ALLOW_PROTOCOL: file
    GIT_CONFIG_COUNT: "2"
    GIT_CONFIG_GLOBAL: /nonexistent/wt/gitconfig
    GIT_CONFIG_KEY_0: user.useConfigOnly
    GIT_CONFIG_KEY_1: rerere.enabled
    GIT_CONFIG_SYSTEM: /nonexistent/wt/gitconfig
    GIT_CONFIG_VALUE_0: "true"
    GIT_CONFIG_VALUE_1: "false"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_PROBE_TIMEOUT_MS: "60000"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
---
success: true
exit_code: 0
----- stdout -----
wt config state logs profile - Performance profile from a trace

Usage: [1m[36mwt config state logs profile[0m [36m[OPTIONS][0m [36m[FILE][0m

[1m[32mArguments:[0m
  [36m[FILE][0m
          Trace to read (defaults to [1m.git/wt/logs/trace.jsonl[0m; [1m-[0m for stdin)

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mOutput:[0m
      [1m[36m--format[0m[36m [0m[36m<FORMAT>[0m
          Output format (text, json) [default: text]

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

      [1m[36m--config-set[0m[36m [0m[36m<toml>[0m
          Override config with inline TOML, e.g. --config-set list.full=true (repeatable)

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: info logs + hook/alias template variables on stderr; -vv: also debug logs and raw subprocess output written to .git/wt/logs/). Set WORKTRUNK_VERBOSE=0|1|2 to apply the same level everywhere — including shell completion, which no flag can reach

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

Summarize where a single [2mwt[0m invocation spent its time, reading the records captured to [2mtrace.jsonl[0m by a [2m-vv[0m run.

Reads [2m.git/wt/logs/trace.jsonl[0m by default, or a trace given as an argument (e.g. a CI artifact, or [2m-[0m for stdin). The report answers three questions: where time goes (subprocess time by command type and by worktree, plus the slowest individual jobs), how parallel the run was (concurrency factor and peak concurrency), and where work was wasted (commands re-run with the same context). For a [2mwt list[0m capture it also shows derived latencies (time to skeleton, time to first result) and a timeline of 
collect milestones; the skeleton/first-result markers need a terminal (TTY) capture. [2m--format=json[0m emits the same data for scripting.

[1m[32mExamples[0m

Profile the last [2m-vv[0m run in this repo:
[107m [0m [2m[0m[2m[34mwt[0m[2m [0m[2m[36m-vv[0m[2m list[0m
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs profile[0m

Profile a trace from elsewhere (e.g. a CI artifact), by path or on stdin:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs profile ci-run.jsonl[0m
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs profile [0m[2m[36m-[0m[2m [0m[2m[36m<[0m[2m ci-run.jsonl[0m

JSON for scripting:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs profile [0m[2m[36m--format=json[0m[2m [0m[2m[36m|[0m[2m [0m[2m[34mjq[0m[2m [0m[2m[32m'.by_type[0]'[0m

----- stderr -----
